--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,12 @@
 <div class="row">
     <div class="col s12 hero hero--homepage grey darken-2">
         <div class="container">
-            <div class="hero__container">
-                <h1>Ocean Vistas Parking Registry</h1>
+            <div class="row">
+                <div class="col s12 offset-m2 m8">
+                    <div class="hero__container">
+                        <h1 class="center-align">Ocean Vistas<br>Parking Registry</h1>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
