--- a/views/partials/_nav.hbs
+++ b/views/partials/_nav.hbs
@@ -1,9 +1,9 @@
 <nav>
     <div class="nav-wrapper blue darken-1">
         <div class="container">
-            <a href="index.html" class="brand-logo left">Ocean Vistas</a>
+            <a href="/" class="brand-logo left">Ocean Vistas</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="login.html">Login</a></li>
+                <li><a href="/login">Login</a></li>
             </ul>
         </div>
     </div>
